--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,35 @@
-# Dependencies
+########################################
+# Unified .gitignore (Backend-friendly + Frontend patterns)
+# - Python/FastAPI, Node/Next.js, editors/OS, logs, caches, env files
+# - Keep *.env.example tracked; ignore real env files
+########################################
+
+# Environment variables (keep examples)
+.env
+.env.*
+!.env.example
+agent-api/.env
+agent-api/.env.*
+!agent-api/.env.example
+
+########################################
+# Python / FastAPI
+agent-api/.venv/
+venv/
+env/
+ENV/
+__pycache__/
+*.py[cod]
+*.pyd
+.pytest_cache/
+.mypy_cache/
+.ruff_cache/
+.tox/
+.coverage*
+pip-wheel-metadata/
+
+########################################
+# Node / Next.js / JS tooling
 node_modules/
 npm-debug.log*
 yarn-debug.log*
@@ -6,99 +37,124 @@ yarn-error.log*
 
 # Next.js build output
 .next/
+.next/cache/
 out/
 
 # Production build
 build/
 dist/
 
-# Environment variables
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+# Logs and runtime
+logs/
+*.log
+pids/
+*.pid
+*.seed
+*.pid.lock
 
-# IDE and editor files
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
+# Coverage
+coverage/
+.nyc_output/
 
-# OS generated files
+# Dependency directories
+jspm_packages/
+
+# npm/yarn caches
+.npm/
+.yarn-integrity
+
+# ESLint cache
+.eslintcache
+
+# Microbundle / TS caches
+.rpt2_cache/
+.rts2_cache_cjs/
+.rts2_cache_es/
+.rts2_cache_umd/
+*.tsbuildinfo
+
+# REPL history
+.node_repl_history
+
+# Pack output
+*.tgz
+
+# Parcel cache
+.cache/
+.parcel-cache/
+
+# Other JS frameworks
+.nuxt/
+.vuepress/dist
+.serverless/
+.fusebox/
+.dynamodb/
+.tern-port
+.vscode-test/
+
+########################################
+# OS / editor files
 .DS_Store
 .DS_Store?
 ._*
 .Spotlight-V100
 .Trashes
-ehthumbs.db
 Thumbs.db
+ehthumbs.db
+desktop.ini
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
+.history/
 
-# Logs
-logs
-*.log
+########################################
+# Supabase local artifacts (if any)
+supabase/.temp/
+supabase/.branches/
+supabase/.outputs/
+########################################
+# Root .gitignore (backend-only)
+# Python/FastAPI, editors/OS, logs, caches, env files
+########################################
 
-# Runtime data
-pids
-*.pid
-*.seed
-*.pid.lock
+# Environment files (keep examples)
+.env
+.env.*
+!.env.example
+agent-api/.env
+agent-api/.env.*
+!agent-api/.env.example
 
-# Coverage directory used by tools like istanbul
-coverage/
+# Python / FastAPI
+agent-api/.venv/
+venv/
+env/
+ENV/
+__pycache__/
+*.py[cod]
+*.pyd
+.pytest_cache/
+.mypy_cache/
+.ruff_cache/
+.tox/
+.coverage*
+pip-wheel-metadata/
 
-# nyc test coverage
-.nyc_output
+# OS / editor cruft
+.DS_Store
+Thumbs.db
+desktop.ini
+.idea/
+.vscode/
+.history/
 
-# Dependency directories
-jspm_packages/
+# General caches
+.cache/
 
-# Optional npm cache directory
-.npm
+# Supabase local artifacts (if any)
+supabase/.temp/
+supabase/.branches/
+supabase/.outputs/
 
-# Optional eslint cache
-.eslintcache
-
-# Microbundle cache
-.rpt2_cache/
-.rts2_cache_cjs/
-.rts2_cache_es/
-.rts2_cache_umd/
-
-# Optional REPL history
-.node_repl_history
-
-# Output of 'npm pack'
-*.tgz
-
-# Yarn Integrity file
-.yarn-integrity
-
-# parcel-bundler cache (https://parceljs.org/)
-.cache
-.parcel-cache
-
-# next.js build output
-.next
-
-# nuxt.js build output
-.nuxt
-
-# vuepress build output
-.vuepress/dist
-
-# Serverless directories
-.serverless
-
-# FuseBox cache
-.fusebox/
-
-# DynamoDB Local files
-.dynamodb/
-
-# TernJS port file
-.tern-port
-
-# Stores VSCode versions used for testing VSCode extensions
-.vscode-test
