--- a/.gitignore
+++ b/.gitignore
@@ -70,6 +70,10 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+# Next.js build output
+.next/
+frontend/.next/
+
 # Output directories
 output/
 scenes/
